--- a/prueba.html
+++ b/prueba.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <meta charset="UTF-8">
+</head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
